--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>MeasuringAttention</title>
+    <title>Login</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
@@ -21,11 +21,11 @@
         <div class="login__text">З поверненням в MeasuringAttention!</div>
     </div>
     <div class="login__content">
-        <a href="#" class="login__button">
+        <a href="conference.html" class="login__button">
             <img src="assets/img/login__ksu24.png" alt="ksu24">
             Увійти за допомогою KSU24
         </a>
-        <a href="#" class="login__button">
+        <a href="conference.html" class="login__button">
             <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M22.54 11.9383C22.54 11.1229 22.4668 10.3388 22.3309 9.58606H11.5V14.0345H17.6891C17.4225 15.472 16.6123 16.6899 15.3943 17.5054V20.3908H19.1109C21.2855 18.3888 22.54 15.4406 22.54 11.9383Z" fill="#4285F4"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.4999 23.1768C14.6049 23.1768 17.2081 22.147 19.1108 20.3906L15.3942 17.5052C14.3644 18.1952 13.0472 18.6029 11.4999 18.6029C8.50467 18.6029 5.96945 16.5799 5.06513 13.8618H1.22308V16.8413C3.11536 20.5997 7.00445 23.1768 11.4999 23.1768Z" fill="#34A853"/>
@@ -34,7 +34,7 @@
             </svg>
             Увійти за допомогою Google
         </a>
-        <a href="#" class="login__button">
+        <a href="conference.html" class="login__button">
             <svg width="23" height="24" viewBox="0 0 23 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <path d="M10.9524 1.27216H1.09521V11.1293H10.9524V1.27216Z" fill="#F25022"/>
                 <path d="M10.9524 12.2245H1.09521V22.0817H10.9524V12.2245Z" fill="#00A4EF"/>
