add page conference-create and conference-redact

--- a/conference.html
+++ b/conference.html
@@ -110,7 +110,7 @@
                         </svg>
                     </div>
                     <div class="header__block">
-                        <a href="#" class="header__button">Створити конференцію</a>
+                        <a href="conference-create.html" class="header__button">Створити конференцію</a>
                         <div class="header__tabs">
                             <div class="header__tab header__tab_active">
                                 Заплановані
@@ -600,8 +600,19 @@
                     </tbody>
                 </table>
             </div>
-
+            <div class="pagination">
+                <div class="pagination__content">
+                    <div class="pagination__prev"><</div>
+                    <div class="pagination__item pagination__item_active">1</div>
+                    <div class="pagination__item">2</div>
+                    <div class="pagination__item">3</div>
+                    <div class="pagination__item">4</div>
+                    <div class="pagination__next">></div>
+                </div>
+                <div class="pagination__all"></div>
+            </div>
         </div>
     </main>
+    <script src="assets/js/script.js"></script>
 </body>
 </html>
