add customization for select

--- a/conference-redact.html
+++ b/conference-redact.html
@@ -21,6 +21,7 @@
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M11.8 0.526932H4C3.13805 0.526932 2.3114 0.869341 1.7019 1.47883C1.09241 2.08833 0.75 2.91498 0.75 3.77693V10.2769C0.75 11.1389 1.09241 11.9655 1.7019 12.575C2.3114 13.1845 3.13805 13.5269 4 13.5269H11.8C12.662 13.5269 13.4886 13.1845 14.0981 12.575C14.7076 11.9655 15.05 11.1389 15.05 10.2769V3.77693C15.05 2.91498 14.7076 2.08833 14.0981 1.47883C13.4886 0.869341 12.662 0.526932 11.8 0.526932ZM2.05 3.77693C2.05 3.25976 2.25545 2.76377 2.62114 2.39807C2.98684 2.03238 3.48283 1.82693 4 1.82693H11.8C12.3172 1.82693 12.8132 2.03238 13.1789 2.39807C13.5446 2.76377 13.75 3.25976 13.75 3.77693V10.2769C13.75 10.7941 13.5446 11.2901 13.1789 11.6558C12.8132 12.0215 12.3172 12.2269 11.8 12.2269H4C3.48283 12.2269 2.98684 12.0215 2.62114 11.6558C2.25545 11.2901 2.05 10.7941 2.05 10.2769V3.77693Z" fill="#242220" fill-opacity="0.85"/>
                 <path fill-rule="evenodd" clip-rule="evenodd" d="M17.9464 1.93093L14.075 4.44903C13.9851 4.50734 13.9109 4.58699 13.8592 4.68089C13.8075 4.7748 13.7798 4.88003 13.7786 4.98723L13.7435 8.38283C13.7422 8.49232 13.7685 8.60038 13.8201 8.69697C13.8717 8.79356 13.9469 8.87555 14.0386 8.93533L17.9438 11.4729C18.0419 11.5369 18.1555 11.5731 18.2724 11.5778C18.3894 11.5826 18.5055 11.5556 18.6085 11.4998C18.7114 11.444 18.7974 11.3615 18.8573 11.2608C18.9171 11.1602 18.9487 11.0453 18.9487 10.9282V2.47693C18.949 2.35973 18.9175 2.24464 18.8578 2.14385C18.798 2.04305 18.712 1.9603 18.609 1.90435C18.5061 1.84839 18.3899 1.82132 18.2728 1.826C18.1557 1.83068 18.042 1.86694 17.9438 1.93093H17.9464ZM17.65 9.73093L15.0487 8.03963L15.076 5.34863L17.65 3.67553V9.73093Z" fill="#242220" fill-opacity="0.85"/>
             </svg>
+            <p>MeasuringAttention</p>
         </div>
         <div class="sidebar__line"></div>
         <nav class="sidebar__menu">
@@ -58,7 +59,7 @@
             </a>
         </nav>
         <div class="sidebar__bottom">
-            <a href="#" class="sidebar__block">
+            <a href="#" class="sidebar__block sidebar__link">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_222_139)">
                         <path d="M8.33337 7.49998C8.33337 7.01084 8.51582 6.69801 8.75533 6.49478C9.01297 6.27618 9.38618 6.14581 9.79171 6.14581C10.1972 6.14581 10.5704 6.27618 10.8281 6.49478C11.0676 6.69801 11.25 7.01084 11.25 7.49998C11.25 7.86428 11.1642 8.06654 11.0645 8.21612C10.9481 8.39062 10.7951 8.52824 10.5362 8.76096L10.4842 8.80765C10.2179 9.04735 9.86751 9.37139 9.60035 9.84339C9.32502 10.3298 9.16671 10.9176 9.16671 11.6666C9.16671 12.1269 9.5398 12.5 10 12.5C10.4603 12.5 10.8334 12.1269 10.8334 11.6666C10.8334 11.1657 10.9355 10.8681 11.0508 10.6644C11.1742 10.4463 11.3447 10.2755 11.5992 10.0465C11.6221 10.0259 11.6462 10.0043 11.6714 9.98188C11.8991 9.77889 12.2111 9.50085 12.4512 9.14062C12.7421 8.70425 12.9167 8.17734 12.9167 7.49998C12.9167 6.53079 12.5262 5.74987 11.9064 5.22393C11.3046 4.71336 10.532 4.47915 9.79171 4.47915C9.05141 4.47915 8.27878 4.71336 7.67704 5.22393C7.05718 5.74987 6.66671 6.53079 6.66671 7.49998C6.66671 7.96022 7.0398 8.33331 7.50004 8.33331C7.96028 8.33331 8.33337 7.96022 8.33337 7.49998Z" fill="#242220" fill-opacity="0.5"/>
@@ -71,12 +72,14 @@
                         </clipPath>
                     </defs>
                 </svg>
+                <div class="sidebar__tooltip">Допомога</div>
             </a>
-            <a href="#" class="sidebar__block">
+            <a href="#" class="sidebar__block sidebar__link">
                 <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M5.83337 1.66669C5.17033 1.66669 4.53445 1.93008 4.06561 2.39892C3.59677 2.86776 3.33337 3.50365 3.33337 4.16669V15.8334C3.33337 16.4964 3.59677 17.1323 4.06561 17.6011C4.53445 18.07 5.17033 18.3334 5.83337 18.3334H14.1667C14.8297 18.3334 15.4656 18.07 15.9345 17.6011C16.4033 17.1323 16.6667 16.4964 16.6667 15.8334V15C16.6667 14.5398 16.2936 14.1667 15.8334 14.1667C15.3731 14.1667 15 14.5398 15 15V15.8334C15 16.0544 14.9122 16.2663 14.756 16.4226C14.5997 16.5789 14.3877 16.6667 14.1667 16.6667H5.83337C5.61236 16.6667 5.4004 16.5789 5.24412 16.4226C5.08784 16.2663 5.00004 16.0544 5.00004 15.8334V4.16669C5.00004 3.94567 5.08784 3.73371 5.24412 3.57743C5.4004 3.42115 5.61236 3.33335 5.83337 3.33335H14.1667C14.3877 3.33335 14.5997 3.42115 14.756 3.57743C14.9122 3.73371 15 3.94567 15 4.16669V5.00002C15 5.46026 15.3731 5.83335 15.8334 5.83335C16.2936 5.83335 16.6667 5.46026 16.6667 5.00002V4.16669C16.6667 3.50365 16.4033 2.86776 15.9345 2.39892C15.4656 1.93008 14.8297 1.66669 14.1667 1.66669H5.83337Z" fill="#ED1D23"/>
                     <path d="M13.9226 6.91076C13.5972 6.58533 13.0696 6.58533 12.7441 6.91076C12.4187 7.2362 12.4187 7.76384 12.7441 8.08928L13.8215 9.16669H10C9.5398 9.16669 9.16671 9.53978 9.16671 10C9.16671 10.4603 9.5398 10.8334 10 10.8334H13.8215L12.7441 11.9108C12.4187 12.2362 12.4187 12.7638 12.7441 13.0893C13.0696 13.4147 13.5972 13.4147 13.9226 13.0893L16.4226 10.5893C16.7481 10.2638 16.7481 9.7362 16.4226 9.41076L13.9226 6.91076Z" fill="#ED1D23"/>
                 </svg>
+                <div class="sidebar__tooltip">Вийти</div>
             </a>
         </div>
     </div>
@@ -134,12 +137,22 @@
                             Тривалість
                             <input type="number" class="conference-settings__input" value="2">
                         </label>
-                        <label class="conference-settings__label">
-                            <select class="conference-settings__input">
-                                <option>Години</option>
-                                <option>Хвилини</option>
-                            </select>
-                        </label>
+<!--                        <label class="conference-settings__label">-->
+<!--                            <select class="conference-settings__input">-->
+<!--                                <option>Години</option>-->
+<!--                                <option>Хвилини</option>-->
+<!--                            </select>-->
+<!--                        </label>-->
+                        <div class="custom-select conference-settings__label">
+                            Факультет/и
+                            <div class="select-selected conference-settings__input">Години
+                            </div>
+                            <div class="select-items select-hide">
+                                <div>Години</div>
+                                <div>Хвилини</div>
+                            </div>
+                            <div class="select-arrow"></div>
+                        </div>
 
                     </div>
                     <label class="conference-settings__accept">
@@ -177,37 +190,49 @@
             <div class="conference-settings__block">
                 <div class="conference-settings__title">Учасники</div>
                 <div class="conference-settings__content">
-                    <label class="conference-settings__label">
+                    <div class="custom-select conference-settings__label">
                         Факультет/и
-                        <select class="conference-settings__input">
-                            <option></option>
-                            <option>1</option>
-                            <option>2</option>
-                        </select>
-                    </label>
-                    <label class="conference-settings__label">
+                        <div class="select-selected conference-settings__input">Выберите опцию
+                        </div>
+                        <div class="select-items select-hide">
+                            <div>Опция 1</div>
+                            <div>Опция 2</div>
+                            <div>Опция 3</div>
+                        </div>
+                        <div class="select-arrow"></div>
+                    </div>
+                    <div class="custom-select conference-settings__label">
                         Кафедра/и
-                        <select class="conference-settings__input">
-                            <option></option>
-                            <option>1</option>
-                            <option>2</option>
-                        </select>
-                    </label>
-                    <label class="conference-settings__label">
+                        <div class="select-selected conference-settings__input">Выберите опцию
+                        </div>
+                        <div class="select-items select-hide">
+                            <div>Опция 1</div>
+                            <div>Опция 2</div>
+                            <div>Опция 3</div>
+                        </div>
+                        <div class="select-arrow"></div>
+                    </div>
+                    <div class="custom-select conference-settings__label">
                         Група/и
-                        <select class="conference-settings__input">
-                            <option></option>
-                            <option>1</option>
-                            <option>2</option>
-                        </select>
-                    </label>
-                    <label class="conference-settings__label">
+                        <div class="select-selected conference-settings__input">Выберите опцию
+                        </div>
+                        <div class="select-items select-hide">
+                            <div>Опция 1</div>
+                            <div>Опция 2</div>
+                            <div>Опция 3</div>
+                        </div>
+                        <div class="select-arrow"></div>
+                    </div>
+                    <div class="custom-select conference-settings__label">
                         Користувач/і
-                        <select class="conference-settings__input">
-                            <option></option>
-                            <option>1</option>
-                            <option>2</option>
-                        </select>
+                        <div class="select-selected conference-settings__input">Выберите опцию
+                        </div>
+                        <div class="select-items select-hide">
+                            <div>Опция 1</div>
+                            <div>Опция 2</div>
+                            <div>Опция 3</div>
+                        </div>
+                        <div class="select-arrow"></div>
                         <div class="conference-settings__participants">
                             <div class="conference-settings__participant">
                                 Петров Петро Петрович
@@ -258,7 +283,7 @@
                                 </svg>
                             </div>
                         </div>
-                    </label>
+                    </div>
                 </div>
             </div>
             <div class="conference-settings__block">
@@ -362,9 +387,11 @@
                     </div>
                 </div>
             </div>
+            <div class="button">Зберегти налаштування</div>
         </div>
     </div>
 </main>
+<script src="assets/js/select.js"></script>
 <script src="assets/js/script.js"></script>
 </body>
 </html>
